Fix currentWebPageSupportsSiteInfo for NTP.

Old code checked if URL is app-specific. When browser-container-contains-ntp
flag is enabled, NTP has about:newtab URL and chrome:newtab Virtual URL.

This CL checks if Virtual URL is app specific.

This CL does not add tests, because PopupMenuMediatorTest fixture does
not test enabled state for menu items. This CL has to be cherry picked,
so ideally it has to be small. Tests will be hopefully added in
a separate CL by the owner of this code ;)

Bug: 919148
Change-Id: I4068106e2c559cce0852cb57289af9b0e0a5a9c9
Reviewed-on: https://chromium-review.googlesource.com/c/1396334
Commit-Queue: Eugene But <eugenebut@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620461}
Former-commit-id: 6ccb9d4e041ebc8311b489b454449e8f38e84b9e